src/test/deca/syntax/invalid/created/class/field_missing_ident_field.deca
// Description :
//    acces champs avec l'identificateur de champs manquant
//
// Resultats :
//		Syntaxe error

{
int a = a.;
}